# CNC_3D

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CNC_3D.sln  ENV_SETUP.md  README.md  build.ninja  build_program.bat  cmake_install.cmake  guidline.txt
Database/: CreateTable  DummyData
Mobile/my_app/: pubspec.yaml
Mobile/my_app/android/: gradle.properties
Mobile/my_app/lib/: main.dart
WebServer/: Program.cs  README.md  WebServer.csproj  appsettings.Development.json
WebServer/Controller/: AccountController.cs  ProductController.cs
WebServer/Model/: AppDbContext.cs
WebServer/Model/Domain/: DomainDbContext.cs
WebServer/ModelDTO/: LoginViewModel.cs  ProductDto.cs
WebServer/Properties/: launchSettings.json
WebServer/Services/: IDateTimeService.cs  SystemDateTimeService.cs
WebServer/View/Account/: Login.cshtml
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: ARCHITECTURE.md  Book1.xlsx  DesignStructureCNC.xlsx  QUICKSTART_VN.md  README.md  ROADMAP.md  SAFETY_EMI.md  SPEC_VN.md  database.csv
docs/hardware/: BOM.md
src/: Program.cpp
src/Common/: LoadDrillBit.cpp  LoadDrillBit.h  ToolConfig.h
src/Config/DrillBit/: DrilBit.csv
src/Config/Gcode/: A80W133_DW_ Rev. B_POS_1.nc  example.nc
src/Control/: mainControl.cpp
src/Model/: DomainModels.h  Drillbit.h
src/UI/: CMakeLists.txt  Main.qml
src/Utils/: json.hpp
stm32_firmware/core-master/: a_StructureFolder.txt
webclient/: README.md  index.html  package-lock.json  package.json  vite.config.ts
webclient/src/: main.tsx  styles.css
(+44 files in other folders)
